# tarot-game

./: Cargo.toml  trash
src/: main.rs  setup.rs
src/components/: dialog.rs  mod.rs
src/controller/: components.rs  mod.rs
src/player_animation/: components.rs  mod.rs
story/: test.json
