[package]
name = "tarot_saga"
version = "0.1.0"
edition = "2021"
authors = ["j"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking", "bevy_asset", "bevy_pbr", "bevy_sprite"] }
bevy_sprite3d = "2.6.0"
rand = "0.8.5"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d", "parallel" ] }
parry3d = "0.13.5"
